--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -26,7 +26,8 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
+          <h2>
+            Correlations Discovered Between Health Risks and Age, Income</h2>
           <p>Beating dwell the sicknesses the sad old age and spanned, and advising hunger and the ugly need. Replacement
             than, overall life, ultricies eget, tempor sit amet, before. Please feel free to be a lot more than law enforcement ever. Jasmine
             it's just my life is. Tracking real estate in japan ipad.</p>
