--- a/index.html
+++ b/index.html
@@ -13,40 +13,26 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
+        <h1>Chart Title Here, centering would look nice</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div id="scatter">
-          <!-- We append our chart here. -->
+          <!-- scatter chart  -->
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12  col-md-9">
-        <div class="article">
-          <h2>
-            Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Beating dwell the sicknesses the sad old age and spanned, and advising hunger and the ugly need. Replacement
-            than, overall life, ultricies eget, tempor sit amet, before. Please feel free to be a lot more than law enforcement ever. Jasmine
-            it's just my life is. Tracking real estate in japan ipad.</p>
-
-          <p>Beating dwell the sicknesses the sad old age and spanned, and advising hunger and the ugly need. Replacement
-            than, overall life, ultricies eget, tempor sit amet, before. Please feel free to be a lot more than law enforcement ever. Jasmine
-            it's just my life is. Tracking real estate in japan ipad.</p>
-
-          <p>Beating dwell the sicknesses the sad old age and spanned, and advising hunger and the ugly need. Replacement
-            than, overall life, ultricies eget, tempor sit amet, before. Please feel free to be a lot more than law enforcement ever. Jasmine
-            it's just my life is. Tracking real estate in japan ipad.</p>
-        </div>
+        
       </div>
     </div>
   </div>
 
   <!-- Footer-->
   <div id="footer">
-    <img src="assets/images/man5.jpg" width = 100% height = "150">
+    <!-- <img src="assets/images/man5.jpg" width = 100% height = "150"> -->
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
